Added a perent module

--- a/pom.xml
+++ b/pom.xml
@@ -3,18 +3,12 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org-ke</groupId>
-  <artifactId>lsms</artifactId>
+  <artifactId>ke</artifactId>
   <version>1.0-SNAPSHOT</version>
-  <packaging>war</packaging>
-  <description>A load shedding management system for k electric</description>
+  <packaging>pom</packaging>
+  <description>Parent module for k electric mis</description>
 
-   <parent>
-	<groupId>org-ke</groupId>
-	<artifactId>ke</artifactId>
-	<version>1.0-SNAPSHOT</version>
-   </parent>
-
-  <name>lsms</name>
+  <name>ke</name>
 <!--  <url>http://maven.apache.org</url> -->
 
   <properties>
@@ -22,5 +16,15 @@
   </properties>
 
   <dependencies>
+	<!-- Dependency for TestNG -->
+	<dependency>
+		<groupId>org.testng</groupId>
+		<artifactId>testng</artifactId>
+		<version>6.1.1</version>
+	</dependency>
   </dependencies>
+
+  <modules>
+	<module>lsms</module>
+  </modules>
 </project>
