Project ready for orm

--- a/lsms/pom.xml
+++ b/lsms/pom.xml
@@ -22,5 +22,14 @@
   </properties>
 
   <dependencies>
+      
+      <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+        </dependency>
+  
   </dependencies>
+  
 </project>
