--- a/lsms/src/main/webapp/WEB-INF/web.xml
+++ b/lsms/src/main/webapp/WEB-INF/web.xml
@@ -1,2 +1,51 @@
 <web-app>
+    
+    <!-- Registering JSF servlet-->
+    <servlet>
+        <servlet-name>Faces Servlet</servlet-name>
+        <servlet-class>javax.faces.webapp.FacesServlet</servlet-class>
+        <load-on-startup>1</load-on-startup>
+    </servlet>
+    <!--Servlet mapping-->
+    <servlet-mapping>
+        <servlet-name>Faces Servlet</servlet-name>
+        <url-pattern>*.xhtml</url-pattern>
+    </servlet-mapping>
+    <!--Setting session time out-->
+    <session-config>
+        <session-timeout>30</session-timeout>
+    </session-config>
+<!--    
+     ********************************************Security Section Starts 
+
+    Defining Draft Documents Security Constraint
+    <security-constraint>
+        <web-resource-collection>
+            <web-resource-name>Load Shedding Draft Document</web-resource-name>
+            <url-pattern>/LoadSheddingPolicyDraft.html</url-pattern>
+        </web-resource-collection>
+        <auth-constraint>
+            <role-name>master_admin</role-name>
+        </auth-constraint>
+    </security-constraint>
+    
+    Defining Realm
+    <login-config>
+        <realm-name>ke</realm-name>
+        <auth-method>FORM</auth-method>
+        <form-login-config>
+            <form-login-page>/Login.html</form-login-page>
+            <form-error-page>/loginerror.html</form-error-page>
+        </form-login-config>
+    </login-config>
+    
+      Security roles used by this web application 
+    <security-role>
+        <role-name>master_admin</role-name>
+        <role-name>technician</role-name>
+    </security-role>
+    
+     **********************************************Security Section Ends 
+-->
+
 </web-app>
