--- a/pom.xml
+++ b/pom.xml
@@ -15,15 +15,42 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
 
-  <dependencies>
+  <dependencyManagement>
+  
+      <dependencies>
 	<!-- Dependency for TestNG -->
 	<dependency>
 		<groupId>org.testng</groupId>
 		<artifactId>testng</artifactId>
 		<version>6.1.1</version>
 	</dependency>
-  </dependencies>
 
+        <!--Prime Faces Extension Dependency-->
+       
+        <dependency>
+            <groupId>org.primefaces.extensions</groupId>
+            <artifactId>primefaces-extensions</artifactId>
+            <version>3.1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>5.2</version>
+        </dependency>
+
+        <!--Java EE 7 API-->
+        
+        <dependency>
+            <groupId>javax</groupId>
+            <artifactId>javaee-web-api</artifactId>
+            <version>7.0</version>
+            <scope>provided</scope>
+        </dependency>
+    
+      </dependencies>
+
+  </dependencyManagement>
   <modules>
 	<module>lsms</module>
   </modules>
